# nlp-pytorch-coding-book

./: README.md  pyproject.toml
chapter_1/: lecture.ipynb
