[tool.poetry]
name = "nlp-pytorch-coding-book"
version = "0.1.0"
description = ""
authors = ["fusedbloxxer <voidwarden@yahoo.com>"]
readme = "README.md"
packages = [{include = "nlp_pytorch_coding_book"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "^1.2.2"
numpy = "^1.24.2"
pandas = "^1.5.3"
scipy = "^1.10.1"
autopep8 = "^2.0.2"
ipykernel = "^6.21.3"
seaborn = "^0.12.2"
torchaudio = {version = "^2.0.1", source = "pypi"}
torchvision = {version = "^0.15.1", source = "pypi"}
torch = {version = "^2.0.0+cu118", source = "pytorch-repository"}

[[tool.poetry.source]]
name = "pytorch-repository"
url = "https://download.pytorch.org/whl/cu118"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
